--- a/pages/learn/acustica_degli_spazi_musicali/03_approccio_geometrico.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_approccio_geometrico.html
@@ -170,9 +170,9 @@
                       <br>
                       <br>
                       Quelle del secondo ordine mi permettono di ricostruire il tracciato del raggio quando esso incontra due pareti (c'è un rimbalzo tra due pareti).
-                      Per ottenere una sorgente di secondo ordine
-
-                      Andando avanti ad aggiungere ordini e dunque sorgenti virtuali, otterrò una sorta di costellazione di sorgenti virtuali che mi danno il contributo delle prime riflessioni.
+                      Per ottenere una sorgente di secondo ordine compio la stessa operazione di simmetria fatta in precedenza, ma questa volta tra la sorgente virtuale A e la parete B.
+                      Ottengo dunque il punto SAB che congiungo con l'ascoltatore. Dal punto in cui questo raggio interseca la parete B, tiro una traiettoria verso SA che a sua volta tocca la parete A.
+                      Con questo procedimento ottengo la traiettoria di secondo ordine della sorgente reale (in verde).
                     </p>
                   </div>
               </div>
