--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -118,8 +118,11 @@
                           <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_05_curva_di_risonanza_di_un_modo_naturale.html"><b>02.05. Curva di Risonanza di un Modo Naturale</b></a></li>
                           <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html"><b>02.06. Frequenza di Schroeder</b></a></li>
                         </ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_approccio_geometrico.html"><b>03. Approccio Geometrico</b></a></li>
+                        <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_00_approccio_geometrico.html"><b>03. Approccio Geometrico</b></a></li>
                         <ul>
+                            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html"><b>03.01. Ray Tracing</b></a></li>
+                            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html"><b>03.02. Sorgenti Virtuali</b></a></li>
+                        </ul>
                   </p>
               </div>
           </div>
