--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Il Concetto di Pregiudizio</title>
+  <title>Ray Tracing e Sorgenti Virtuali</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Acustica degli Ambienti Musicali</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Vibrazione Come Modello Universale</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Ray Tracing e Sorgenti Virtuali</strong></h4>
             </div>
         </div>
     </div>
@@ -91,7 +91,82 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
+                    Il Ray Tracing è stato mediato da applicazioni di design visuale, modellazione 3D per esempio.
+                    Consiste nel prendere una sorgente come se fosse la sorgente di un certo numero di raggi e poi calcolare il percorso di ognuna di esse per vedere quale raggiunge il punto d'ascolto prefissato.
+                    Questo è il sistema con il quale si fa tipicamente il rendering dei modelli 3D.
+                    <br>
+                    <br>
+                    Nel sistema delle sorgenti virtuali posso togliere la parete superiore e sostituirla con una sorgente che si trova nella posizione speculare rispetto alla sorgente reale.
+                    Praticamente faccio una simmetria rispetto alla parete superiore.
+                    </p>
+                    </div>
+                    </div>
+                    </div>
+                    </section>
 
+                    <!-- Image-->
+                    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                    <div class="container-fluid">
+                    <div class="row justify-content-center">
+                      <div class="col-12 col-lg-5">
+                          <div class="image-wrapper">
+                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/15_riflessioni_primo_ordine.png" alt="www.gabrielavelitch.com">
+                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+                          </div>
+                      </div>
+                    </div>
+                    </div>
+                    </section>
+
+                    <!-- Text-->
+                    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                    <div class="container">
+                    <div class="row justify-content-center">
+                    <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                    Con il sistema delle sorgenti virtuali posso dunque sostituire le quattro pareti con la sorgente reale più quattro sorgenti virtuali del primo ordine.
+                    Quindi come primo ordine di riflessioni abbiamo quello che viene dalle quattro sorgenti virtuali che sono state collocate sostituendo le pareti con un'operazione di simmetria.
+                    In sostanza è come se quando si accende la sorgente reale contemporaneamente si accendessero tutte le sorgenti virtuali e l'ascoltatore viene investito sia dall'onda diretta sia a quelle relative alle quattro sorgenti virtuali.
+                    Il contributo che arriva dalle sorgenti virtuali andrà attenuato moltiplicandolo con il coefficiente di attenuazione di quella parete e sarà ritardato rispetto a quello della sorgente diretta in quanto farà un percorso più lungo.
+                    Per una semplificazione grafica, nel caso preso in analisi vediamo solo quattro sorgenti virtuali; nel primo ordine esse saranno sempre sei.
+                    Le sorgenti virtuali del primo ordine mi permettono di ricostruire la traiettoria del raggio quando esso incontra una sola parete.
+                    <br>
+                    <br>
+                    Per poter analizzare un comportamento più complesso dovrò aumentare il numero pareti.
+                    Le sorgenti virtuali del secondo ordine mi permettono di ricostruire il tracciato del raggio quando esso incontra due pareti (c'è un rimbalzo tra due pareti).
+                    </p>
+                    </div>
+                    </div>
+                    </div>
+                    </section>
+
+                    <!-- Image-->
+                    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                    <div class="container-fluid">
+                    <div class="row justify-content-center">
+                    <div class="col-12 col-lg-5">
+                    <div class="image-wrapper">
+                    <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/16_riflessioni_secondo_ordine.png" alt="www.gabrielavelitch.com">
+                    <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+                    </div>
+                    </div>
+                    </div>
+                    </div>
+                    </section>
+
+                    <!-- Text-->
+                    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                    <div class="container">
+                    <div class="row justify-content-center">
+                    <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                    Per ottenere una sorgente di secondo ordine compio la stessa operazione di simmetria fatta in precedenza, ma questa volta tra la sorgente virtuale A e la parete B (linea blu).
+                    Ottengo dunque il punto SAB che congiungo con l'ascoltatore (linea arancione).
+                    Dal punto in cui questo raggio interseca la parete B, tiro una traiettoria verso SA (linea rosa) che a sua volta tocca la parete A.
+                    Con questo procedimento ottengo la traiettoria di secondo ordine della sorgente reale (linee verdi).
+                    <br>
+                    <br>
+                    Andando avanti ad aggiungere ordini e dunque sorgenti virtuali, otterrò una sorta di costellazione di sorgenti virtuali che mi danno il contributo delle prime riflessioni.
                   </p>
                 </div>
             </div>
