--- a/pages/learn/acustica_degli_spazi_musicali/03_00_approccio_geometrico.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_00_approccio_geometrico.html
@@ -126,9 +126,9 @@
                       Posso ragionevolmente usare questo approccio quando la lunghezza d'onda è più piccola di 1 metro.
                       <br>
                       <br>
-                      I sistemi che si usano per calcolare la risposta dello spazio ad un campo acustico sono due: Ray Tracing e le Sorgenti Virtuali.
+                      I sistemi che si usano per calcolare la risposta dello spazio ad un campo acustico sono due: <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html"><b>Ray Tracing e le Sorgenti Virtuali</b></a>.
                       Entrambi i sistemi sono implementati in software commerciali di previsione acustica degli ambienti.
-                      
+
       </p>
       </div>
       </div>
@@ -140,8 +140,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
