--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
@@ -91,12 +91,12 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    Il Ray Tracing è stato mediato da applicazioni di design visuale, modellazione 3D per esempio.
+                    Il <b>Ray Tracing</b> è stato mediato da applicazioni di design visuale, modellazione 3D per esempio.
                     Consiste nel prendere una sorgente come se fosse la sorgente di un certo numero di raggi e poi calcolare il percorso di ognuna di esse per vedere quale raggiunge il punto d'ascolto prefissato.
                     Questo è il sistema con il quale si fa tipicamente il rendering dei modelli 3D.
                     <br>
                     <br>
-                    Nel sistema delle sorgenti virtuali posso togliere la parete superiore e sostituirla con una sorgente che si trova nella posizione speculare rispetto alla sorgente reale.
+                    Nel sistema delle <b>sorgenti virtuali</b> posso togliere la parete superiore e sostituirla con una sorgente che si trova nella posizione speculare rispetto alla sorgente reale.
                     Praticamente faccio una simmetria rispetto alla parete superiore.
                     </p>
                     </div>
@@ -180,7 +180,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_00_approccio_geometrico.html">&lt; Previous</a>
                     <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
