--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
@@ -85,6 +85,20 @@
 </section>
 
 
+<!-- Image-->
+<section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+<div class="container-fluid">
+<div class="row justify-content-center">
+  <div class="col-12 col-lg-5">
+      <div class="image-wrapper">
+          <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/17_ray_tracing.png" alt="www.gabrielavelitch.com">
+          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing</p>
+      </div>
+  </div>
+</div>
+</div>
+</section>
+
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
@@ -103,6 +117,8 @@
                     </div>
                     </div>
                     </section>
+
+
 
                     <!-- Image-->
                     <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
