--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
@@ -183,6 +183,7 @@
                     <br>
                     <br>
                     Andando avanti ad aggiungere ordini e dunque sorgenti virtuali, otterrò una sorta di costellazione di sorgenti virtuali che mi danno il contributo delle prime riflessioni.
+                    Posso avere infinite sorgenti virtuali, ma non tutte saranno utili all'ascoltatore in quanto la loro efficacia si rapporta in base alla posizione dell'ascoltatore stesso.
                   </p>
                 </div>
             </div>
