--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
@@ -176,7 +176,7 @@
                     <div class="row justify-content-center">
                     <div class="col-md-12 col-lg-8">
                     <p class="mbr-text mbr-fonts-style display-7">
-                    Per ottenere una sorgente di secondo ordine compio la stessa operazione di simmetria fatta in precedenza, ma questa volta tra la sorgente virtuale A e la parete B (linea blu).
+                    Per ottenere una <b>sorgente virtuale di secondo ordine</b> compio la stessa operazione di simmetria fatta in precedenza, ma questa volta tra la sorgente virtuale A e la parete B (linea blu).
                     Ottengo dunque il punto SAB che congiungo con l'ascoltatore (linea arancione).
                     Dal punto in cui questo raggio interseca la parete B, tiro una traiettoria verso SA (linea rosa) che a sua volta tocca la parete A.
                     Con questo procedimento ottengo la traiettoria di secondo ordine della sorgente reale (linee verdi).
