--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
@@ -184,13 +184,28 @@
                     <br>
                     Andando avanti ad aggiungere ordini e dunque sorgenti virtuali, otterrò una sorta di costellazione di sorgenti virtuali che mi danno il contributo delle prime riflessioni.
                     Posso avere infinite sorgenti virtuali, ma non tutte saranno utili all'ascoltatore in quanto la loro efficacia si rapporta in base alla posizione dell'ascoltatore stesso.
+                    <br>
+                    <br>
+                    Ricapitolando, quando accendiamo la sorgente, l'ascoltatore viene investito dal suono diretto e da una moltitudine di sorgenti virtuali, opportunamente attenuate per assorbimento, attenuazione, ed in base all'assorbimento dell'aria (che si comporta come un passa basso con la frequenza di taglio che varia in funzione della distanza).
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
-
+    <!-- Image-->
+    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+    <div class="row justify-content-center">
+    <div class="col-12 col-lg-5">
+    <div class="image-wrapper">
+    <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/18_frequency_cut_distance.png" alt="www.gabrielavelitch.com">
+    <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+    </div>
+    </div>
+    </div>
+    </div>
+    </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
