--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
@@ -200,7 +200,7 @@
     <div class="col-12 col-lg-5">
     <div class="image-wrapper">
     <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/18_frequency_cut_distance.png" alt="www.gabrielavelitch.com">
-    <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+    <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Calcolo per determinare la frequenza di taglio in base alla distanza</p>
     </div>
     </div>
     </div>
