--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
@@ -207,6 +207,20 @@
     </div>
     </section>
 
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+    <div class="row justify-content-center">
+    <div class="col-md-12 col-lg-8">
+    <p class="mbr-text mbr-fonts-style display-7">
+    Il ruolo dell'attenuazione dell'aria non è per niente trascurabile. Basta farsi due conti, già a 6 metri di distanza la frequenza di taglio è in banda audio.
+    A distanza di un km la frequenza di taglio è intorno ai 600Hz, ció vuol dire che a 5Khz l'attenuazione è di 44dB.
+    </p>
+    </div>
+    </div>
+    </div>
+    </section>
+
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
