--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
@@ -215,6 +215,7 @@
     <p class="mbr-text mbr-fonts-style display-7">
     Il ruolo dell'attenuazione dell'aria non è per niente trascurabile. Basta farsi due conti, già a 6 metri di distanza la frequenza di taglio è in banda audio.
     A distanza di un km la frequenza di taglio è intorno ai 600Hz, ció vuol dire che a 5Khz l'attenuazione è di 44dB.
+    Un buon riverberatore dovrebbe tenere assolutamente in considerazione questo parametro.
     </p>
     </div>
     </div>
