--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html
@@ -110,6 +110,34 @@
                     Questo è il sistema con il quale si fa tipicamente il rendering dei modelli 3D.
                     <br>
                     <br>
+                    Con l'applet <a href="https://amcoustics.com/tools/amray"><b>amray - The Raytracing Sketchpad</b></a> possiamo dsegnare uno spazio geometrico a due dimensioni e valutare in comportamento delle prime riflessioni attraverso l'algoritmo di Ray Tracing.
+                  </p>
+                  </div>
+                  </div>
+                  </div>
+                  </section>
+
+                  <!-- Image-->
+                  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                  <div class="container-fluid">
+                  <div class="row justify-content-center">
+                    <div class="col-12 col-lg-5">
+                        <div class="image-wrapper">
+                            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/19_amray.png" alt="www.gabrielavelitch.com">
+                            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Visualizzazione grafica dell'algoritmo di Ray Tracing</p>
+                        </div>
+                    </div>
+                  </div>
+                  </div>
+                  </section>
+
+
+                    <!-- Text-->
+                    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-md-12 col-lg-8">
+                                    <p class="mbr-text mbr-fonts-style display-7">
                     Nel sistema delle <b>sorgenti virtuali</b> posso togliere la parete superiore e sostituirla con una sorgente che si trova nella posizione speculare rispetto alla sorgente reale.
                     Praticamente faccio una simmetria rispetto alla parete superiore.
                     </p>
