--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -120,8 +120,8 @@
                         </ul>
                         <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_00_approccio_geometrico.html"><b>03. Approccio Geometrico</b></a></li>
                         <ul>
-                            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html"><b>03.01. Ray Tracing e Sorgenti Virtuali</b></a></li>
-                            
+                            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html"><b>03.01. Ray Tracing</b></a></li>
+                            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html"><b>03.02. Sorgenti Virtuali</b></a></li>
                         </ul>
                   </p>
               </div>
