--- a/pages/learn/acustica_degli_spazi_musicali/03_00_approccio_geometrico.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_00_approccio_geometrico.html
@@ -126,7 +126,7 @@
                       Posso ragionevolmente usare questo approccio quando la lunghezza d'onda è più piccola di 1 metro.
                       <br>
                       <br>
-                      I sistemi che si usano per calcolare la risposta dello spazio ad un campo acustico sono due: <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing_e_sorgenti_virtuali.html"><b>Ray Tracing e le Sorgenti Virtuali</b></a>.
+                      I sistemi che si usano per calcolare la risposta dello spazio ad un campo acustico sono due: <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html"><b>Ray Tracing</b></a> e le <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html"><b>sorgenti virtuali</b></a>.
                       Entrambi i sistemi sono implementati in software commerciali di previsione acustica degli ambienti.
 
       </p>
