--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
@@ -110,7 +110,7 @@
                     Questo è il sistema con il quale si fa tipicamente il rendering dei modelli 3D.
                     <br>
                     <br>
-                    Con l'applet <a href="https://amcoustics.com/tools/amray"><b>amray - The Raytracing Sketchpad</b></a> possiamo dsegnare uno spazio geometrico a due dimensioni e valutare in comportamento delle prime riflessioni attraverso l'algoritmo di Ray Tracing.
+                    Con l'applet <a href="https://amcoustics.com/tools/amray"><b>amray - The Raytracing Sketchpad</b></a> possiamo dsegnare uno spazio geometrico a due dimensioni e valutare il comportamento delle prime riflessioni attraverso l'algoritmo di Ray Tracing.
                   </p>
                   </div>
                   </div>
@@ -137,13 +137,27 @@
                           <div class="row justify-content-center">
                               <div class="col-md-12 col-lg-8">
                                   <p class="mbr-text mbr-fonts-style display-7">
-
+                                    Aggiungendo l'ascoltatore possiamo notare come varia la risposta all'impulso in base alla sua posizione.
+                                    Se l'ascoltatore si avvicina alle pareti il suono diretto impiega quasi lo stesso tempo del suono riflesso ad arrivare all'ascoltatore.
                                   </p>
                                   </div>
                                   </div>
                                   </div>
                                   </section>
 
+                                  <!-- Image-->
+                                  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                                  <div class="container-fluid">
+                                  <div class="row justify-content-center">
+                                    <div class="col-12 col-lg-5">
+                                        <div class="image-wrapper">
+                                            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/20_amray_ascoltatore.gif" alt="www.gabrielavelitch.com">
+                                            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing tra sorgente e ascolatre in movimento</p>
+                                        </div>
+                                    </div>
+                                  </div>
+                                  </div>
+                                  </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
