--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
@@ -139,6 +139,7 @@
                                   <p class="mbr-text mbr-fonts-style display-7">
                                     Aggiungendo l'ascoltatore possiamo notare come varia la risposta all'impulso in base alla sua posizione.
                                     Se l'ascoltatore si avvicina alle pareti il suono diretto impiega quasi lo stesso tempo del suono riflesso ad arrivare all'ascoltatore.
+                                    La distanza tra il suono diretto e l'arrivo delle prime riflessioni ci da informazimi importanti sulla posizione della sorgente.
                                   </p>
                                   </div>
                                   </div>
