--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
@@ -160,6 +160,20 @@
                                   </div>
                                   </section>
 
+                                  <!-- Text-->
+                                  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                                      <div class="container">
+                                          <div class="row justify-content-center">
+                                              <div class="col-md-12 col-lg-8">
+                                                  <p class="mbr-text mbr-fonts-style display-7">
+                                                    Questo parametro viene chiamato <i>early reflection</i> o <i>pre delay</i> nei riverberatori commerciali.
+                                                    La zona delle prime riflessioni è quella zona in cui il nostro orecchio riesce ancora a percepire i signoli contributi.
+                                                  </p>
+                                                  </div>
+                                                  </div>
+                                                  </div>
+                                                  </section>
+
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
