--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
@@ -168,6 +168,10 @@
                                                   <p class="mbr-text mbr-fonts-style display-7">
                                                     Questo parametro viene chiamato <i>early reflection</i> o <i>pre delay</i> nei riverberatori commerciali.
                                                     La zona delle prime riflessioni è quella zona in cui il nostro orecchio riesce ancora a percepire i signoli contributi.
+                                                    <br>
+                                                    <br>
+                                                    Quando mi avvicino ad una parete, le prime riflessioni si avvicinano molto al suono diretto, ed in queste condizioni la parte di riverberazione diffusa sovrasta la zona di prime riflessioni.
+                                                    Oltre alle caratteristiche quantitative che caratterizznoa lo spazio e la posizione dell'ascoltatore all'interno nello spazi, è importante capire come sono collocate temporalmente le 3 regioni di: suono diretto, prime riflessioni e zona diffusa (coda).
                                                   </p>
                                                   </div>
                                                   </div>
