--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
@@ -153,7 +153,7 @@
                                     <div class="col-12 col-lg-5">
                                         <div class="image-wrapper">
                                             <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/20_amray_ascoltatore.gif" alt="www.gabrielavelitch.com">
-                                            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing tra sorgente e ascolatre in movimento</p>
+                                            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing tra sorgente e ascolatore in movimento</p>
                                         </div>
                                     </div>
                                   </div>
