--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
@@ -171,7 +171,9 @@
                                                     <br>
                                                     <br>
                                                     Quando mi avvicino ad una parete, le prime riflessioni si avvicinano molto al suono diretto, ed in queste condizioni la parte di riverberazione diffusa sovrasta la zona di prime riflessioni.
-                                                    Oltre alle caratteristiche quantitative che caratterizznoa lo spazio e la posizione dell'ascoltatore all'interno nello spazi, è importante capire come sono collocate temporalmente le 3 regioni di: suono diretto, prime riflessioni e zona diffusa (coda).
+                                                    <br>
+                                                    <br>
+                                                    Oltre alle caratteristiche quantitative che caratterizzano lo spazio e la posizione dell'ascoltatore all'interno dello spazio, è importante capire come sono collocate temporalmente le 3 regioni di: suono diretto, prime riflessioni e zona diffusa (coda).
                                                   </p>
                                                   </div>
                                                   </div>
