--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
@@ -173,7 +173,7 @@
                                                     Quando mi avvicino ad una parete, le prime riflessioni si avvicinano molto al suono diretto, ed in queste condizioni la parte di riverberazione diffusa sovrasta la zona di prime riflessioni.
                                                     <br>
                                                     <br>
-                                                    Oltre alle caratteristiche quantitative che caratterizzano lo spazio e la posizione dell'ascoltatore all'interno dello spazio, è importante capire come sono collocate temporalmente le 3 regioni di: suono diretto, prime riflessioni e zona diffusa (coda).
+                                                    Oltre alle caratteristiche quantitative che caratterizzano lo spazio e la posizione dell'ascoltatore all'interno dello spazio, è importante capire come sono collocate temporalmente le 3 regioni di: <b>suono diretto, prime riflessioni e zona diffusa (coda)</b>.
                                                   </p>
                                                   </div>
                                                   </div>
