--- a/pages/learn/acustica_degli_spazi_musicali/04_00_approccio_statistico.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_00_approccio_statistico.html
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Acustica degli Ambienti Musicali</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Vibrazione Come Modello Universale</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Approccio Statistico</strong></h4>
             </div>
         </div>
     </div>
