--- a/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html
@@ -214,7 +214,7 @@ Dobbiamo sempre ricordare che tutte le funzioni matematiche che stiamo descriven
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
                 <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_00_approccio_statistico.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
