--- a/pages/learn.html
+++ b/pages/learn.html
@@ -142,7 +142,7 @@
                                             <div class="item features-image сol-12 col-md-6 col-lg-3">
                                                 <div class="item-wrapper">
                                                     <div class="item-img">
-                                                        <img src="https://www.gabrielavelitch.com/img/site/spettro.webp" data-slide-to="0" data-bs-slide-to="0">
+                                                        <img src="https://www.gabrielavelitch.com/img/site/acustica_degli_ambienti_musicali.webp" data-slide-to="0" data-bs-slide-to="0">
                                                     </div>
                                                     <div class="item-content">
                                                         <h5 class="item-title mbr-fonts-style display-7">
