--- a/index.html
+++ b/index.html
@@ -269,6 +269,67 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
+<!-- Learn-->
+<section data-bs-version="5.1" class="features3 cid-t1EZGBaNgR" id="features3-2m">
+
+
+  <div class="container">
+      <div class="mbr-section-head">
+          <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5">
+              <strong>LEARN</strong></h4>
+          <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">Articles, papers and books</h5>
+      </div>
+      <div class="row mt-4">
+          <div class="item features-image сol-12 col-md-6 col-lg-3 active">
+              <div class="item-wrapper">
+                  <div class="item-img">
+                      <img src="img/site/acustica_degli_ambienti_musicali.webp" data-slide-to="0" data-bs-slide-to="0" alt="">
+                  </div>
+                  <div class="item-content">
+                      <h5 class="item-title mbr-fonts-style display-7"><strong>Acustica degli Ambienti Musicali</strong></h5>
+                  </div>
+                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+              </div>
+          </div>
+          <div class="item features-image сol-12 col-md-6 col-lg-3">
+              <div class="item-wrapper">
+                  <div class="item-img">
+                      <img src="img/site/spectrogram.webp" data-slide-to="1" data-bs-slide-to="1" alt="">
+                  </div>
+                  <div class="item-content">
+                      <h5 class="item-title mbr-fonts-style display-7"><strong>Storia della Musica Elettroacustica</strong></h5>
+                  </div>
+                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+              </div>
+          </div>
+          <div class="item features-image сol-12 col-md-6 col-lg-3">
+              <div class="item-wrapper">
+                  <div class="item-img">
+                      <img src="img/site/https://www.gabrielavelitch.com/img/site/stockhausen.webp" data-slide-to="2" data-bs-slide-to="2">
+                  </div>
+                  <div class="item-content">
+                      <h5 class="item-title mbr-fonts-style display-7"><strong>Il Paradigma di Stockhausen</strong></h5>
+                  </div>
+                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+              </div>
+          </div>
+          <div class="item features-image сol-12 col-md-6 col-lg-3">
+              <div class="item-wrapper">
+                  <div class="item-img">
+                      <img src="img/site/graphscore.webp" data-slide-to="3" data-bs-slide-to="3" alt="">
+                  </div>
+                  <div class="item-content">
+                      <h5 class="item-title mbr-fonts-style display-7"><strong>Laboratorio di Tecnologie Musicali</strong></h5>
+                  </div>
+                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/laboratorio_di_tecnologie_musicali.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+              </div>
+          </div>
+
+      </div>
+  </div>
+</section>
+
+
 <section data-bs-version="5.1" class="features3 cid-sYxzkmBasE" id="features3-o">
     <div class="container">
         <div class="mbr-section-head">
