--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="item features-image сol-12 col-md-6 col-lg-3">
               <div class="item-wrapper">
                   <div class="item-img">
-                      <img src="img/site/https://www.gabrielavelitch.com/img/site/stockhausen.webp" data-slide-to="2" data-bs-slide-to="2">
+                      <img src="img/site/stockhausen.webp" data-slide-to="2" data-bs-slide-to="2">
                   </div>
                   <div class="item-content">
                       <h5 class="item-title mbr-fonts-style display-7"><strong>Il Paradigma di Stockhausen</strong></h5>
