--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <div class="item-content">
                       <h5 class="item-title mbr-fonts-style display-7"><strong>Acustica degli Ambienti Musicali</strong></h5>
                   </div>
-                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More &gt;</a></div>
               </div>
           </div>
           <div class="item features-image сol-12 col-md-6 col-lg-3">
@@ -299,7 +299,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <div class="item-content">
                       <h5 class="item-title mbr-fonts-style display-7"><strong>Storia della Musica Elettroacustica</strong></h5>
                   </div>
-                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More &gt;</a></div>
               </div>
           </div>
           <div class="item features-image сol-12 col-md-6 col-lg-3">
@@ -310,7 +310,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <div class="item-content">
                       <h5 class="item-title mbr-fonts-style display-7"><strong>Il Paradigma di Stockhausen</strong></h5>
                   </div>
-                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More &gt;</a></div>
               </div>
           </div>
           <div class="item features-image сol-12 col-md-6 col-lg-3">
@@ -321,7 +321,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <div class="item-content">
                       <h5 class="item-title mbr-fonts-style display-7"><strong>Laboratorio di Tecnologie Musicali</strong></h5>
                   </div>
-                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/laboratorio_di_tecnologie_musicali.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/laboratorio_di_tecnologie_musicali.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More &gt;</a></div>
               </div>
           </div>
 
