--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="mbr-section-head">
           <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5">
               <strong>LEARN</strong></h4>
-          <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">Articles, Papers and Books</h5>
+          <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">Books, Laboratories and Tutorials</h5>
       </div>
       <div class="row mt-4">
           <div class="item features-image сol-12 col-md-6 col-lg-3 active">
