--- a/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html
+++ b/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html
@@ -2,16 +2,6 @@
 <html>
 <head>
 
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0MB26WWVES"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-0MB26WWVES');
-</script>
-
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -164,7 +154,7 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
                 <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_05_curva_di_risonanza_di_un_modo_naturale.html">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_00_approccio_geometrico.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
