--- a/pages/learn/acustica_degli_spazi_musicali/02_04_analisi_delle_frequenze_associate.html
+++ b/pages/learn/acustica_degli_spazi_musicali/02_04_analisi_delle_frequenze_associate.html
@@ -89,6 +89,27 @@
         </div>
     </section>
 
+
+    <!-- Image-->
+          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+              <div class="container-fluid">
+                  <div class="row justify-content-center">
+                      <div class="col-12 col-lg-5">
+                          <div class="image-wrapper">
+                            <video width="320" height="240" autoplay><source src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/09_amroc.mp4" type="video/mp4"></video>
+                        <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Analisi delle frequenze associate di uno spazio tridimensionale</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </section>
+
+    <video width="320" height="240" autoplay>
+  <source src="movie.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video>
+
     <!-- Image-->
           <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
               <div class="container-fluid">
