--- a/pages/learn/acustica_degli_spazi_musicali/02_04_analisi_delle_frequenze_associate.html
+++ b/pages/learn/acustica_degli_spazi_musicali/02_04_analisi_delle_frequenze_associate.html
@@ -96,7 +96,7 @@
                   <div class="row justify-content-center">
                       <div class="col-12 col-lg-5">
                           <div class="image-wrapper">
-                            <video width="320" height="240" autoplay><source src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/09_amroc.mp4" type="video/mp4"></video>
+                            <video autoplay><source src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/09_amroc.mp4" type="video/mp4"></video>
                         <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Analisi delle frequenze associate di uno spazio tridimensionale</p>
                           </div>
                       </div>
