--- a/pages/learn/acustica_degli_spazi_musicali/02_04_analisi_delle_frequenze_associate.html
+++ b/pages/learn/acustica_degli_spazi_musicali/02_04_analisi_delle_frequenze_associate.html
@@ -90,7 +90,7 @@
     </section>
 
 
-    <!-- Image-->
+    <!-- Video MP4-->
           <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
               <div class="container-fluid">
                   <div class="row justify-content-center">
