--- a/pages/learn/acustica_degli_spazi_musicali/02_03_modi_naturali_in_tre_dimensioni_spaziali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/02_03_modi_naturali_in_tre_dimensioni_spaziali.html
@@ -94,19 +94,19 @@
         </div>
     </section>
 
-    <!-- Image-->
-          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-              <div class="container-fluid">
-                  <div class="row justify-content-center">
-                      <div class="col-12 col-lg-5">
-                          <div class="image-wrapper">
-                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/06_primo_modo_due_pareti.gif" alt="www.gabrielavelitch.com">
+          <!-- Video MP4-->
+                <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                    <div class="container-fluid">
+                        <div class="row justify-content-center">
+                            <div class="col-12 col-lg-5">
+                                <div class="image-wrapper">
+                                  <video width="100%" height="100%" autoplay loop muted><source src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/06_primo_modo_due_pareti.mp4" type="video/mp4"></video>
                               <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Primo modo naturale tra due pareti (1, 0, 0)</p>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </section>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
           <!-- Text-->
           <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
@@ -122,19 +122,20 @@
                 </div>
             </section>
 
-            <!-- Image-->
-                  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-                      <div class="container-fluid">
-                          <div class="row justify-content-center">
-                              <div class="col-12 col-lg-5">
-                                  <div class="image-wrapper">
-                                      <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/06_secondo_modo_due_pareti.gif" alt="www.gabrielavelitch.com">
+
+                  <!-- Video MP4-->
+                        <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                            <div class="container-fluid">
+                                <div class="row justify-content-center">
+                                    <div class="col-12 col-lg-5">
+                                        <div class="image-wrapper">
+                                          <video width="100%" height="100%" autoplay loop muted><source src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/06_secondo_modo_due_pareti.mp4" type="video/mp4"></video>
                                       <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Secondo modo naturale tra due pareti (2, 0, 0)</p>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </section>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
 
 
                   <!-- Text-->
@@ -154,19 +155,19 @@
                         </div>
                     </section>
 
-                    <!-- Image-->
-                          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-                              <div class="container-fluid">
-                                  <div class="row justify-content-center">
-                                      <div class="col-12 col-lg-5">
-                                          <div class="image-wrapper">
-                                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/07_quattro_pareti.gif" alt="www.gabrielavelitch.com">
+                          <!-- Video MP4-->
+                                <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                                    <div class="container-fluid">
+                                        <div class="row justify-content-center">
+                                            <div class="col-12 col-lg-5">
+                                                <div class="image-wrapper">
+                                                  <video width="100%" height="100%" autoplay loop muted><source src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/07_quattro_pareti.mp4" type="video/mp4"></video>
                                               <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Primo modo naturale tra quattro pareti (1, 1, 0)</p>
-                                          </div>
-                                      </div>
-                                  </div>
-                              </div>
-                          </section>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </section>
 
                           <!-- Text-->
                           <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
@@ -186,19 +187,19 @@
                                 </div>
                             </section>
 
-                            <!-- Image-->
-                                  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-                                      <div class="container-fluid">
-                                          <div class="row justify-content-center">
-                                              <div class="col-12 col-lg-5">
-                                                  <div class="image-wrapper">
-                                                      <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/08_sei_pareti.gif" alt="www.gabrielavelitch.com">
+                                  <!-- Video MP4-->
+                                        <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                                            <div class="container-fluid">
+                                                <div class="row justify-content-center">
+                                                    <div class="col-12 col-lg-5">
+                                                        <div class="image-wrapper">
+                                                          <video width="100%" height="100%" autoplay loop muted><source src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/08_sei_pareti.mp4" type="video/mp4"></video>
                                                       <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Primo modo naturale tra sei pareti (1, 1, 1)</p>
-                                                  </div>
-                                              </div>
-                                          </div>
-                                      </div>
-                                  </section>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </section>
 
 
 <!-- Prev/Next-->
