--- a/assets/internals/gkv_nav.html
+++ b/assets/internals/gkv_nav.html
@@ -4,7 +4,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://www.gabrielavelitch.com/index.html">
-                        <img src="https://www.gabrielavelitch.com/assets/images/favicon-96x121.png" alt="" style="height: 3rem;">
+                        <img width="100%" height="100%" src="https://www.gabrielavelitch.com/assets/images/favicon-96x121.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="https://www.gabrielavelitch.com/index.html">Gabriela Velitch</a></span>
