--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
@@ -136,19 +136,19 @@
                                   </div>
                                   </section>
 
-                                  <!-- Image-->
-                                  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-                                  <div class="container-fluid">
-                                  <div class="row justify-content-center">
-                                    <div class="col-12 col-lg-5">
-                                        <div class="image-wrapper">
-                                            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/20_amray_ascoltatore.gif" alt="www.gabrielavelitch.com">
-                                            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing tra sorgente e ascolatore in movimento</p>
-                                        </div>
-                                    </div>
-                                  </div>
-                                  </div>
-                                  </section>
+                                  <!-- Video MP4-->
+                                        <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                                            <div class="container-fluid">
+                                                <div class="row justify-content-center">
+                                                    <div class="col-12 col-lg-5">
+                                                        <div class="image-wrapper">
+                                                          <video width="100%" height="100%" autoplay loop muted><source src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/20_amray_ascoltatore.mp4" type="video/mp4"></video>
+                                                      <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing tra sorgente e ascolatore in movimento</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </section>
 
                                   <!-- Text-->
                                   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
